Start flickity at correct place on mobile

--- a/src/components/04-Components/timeline/_components.timeline.css
+++ b/src/components/04-Components/timeline/_components.timeline.css
@@ -123,7 +123,7 @@
 }
 
 .c-timeline__item:nth-child(2n) {
-  margin-top: 32rem;
+  margin-top: 28rem;
 }
 
 .c-timeline__item:focus {
